<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ERNI Moods</string>
    <string name="greeting">How are you today?</string>
    <string name="action_settings">Settings</string>
    <string name="action_preferences">Preferences</string>
    <string name="service_switch">Web Service</string>
    <string name="service_switch_summary">Turn web service on/off</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_signUp_message">Sign Up to Moods App</string>
    <string name="title_activity_myMood">Tell me your mood!</string>
    <!-- String resources for SignUp-Acitvity -->
    <string name="signUpTitle">Sign up to ERNI Moods now!</string>
    <string name="signUpUsernameHint">Username</string>
    <string name="signUpUsernameHint1">Username</string>
    <string name="SignUpPasswordHint">Password</string>
    <string name="signUpEmailHint">E-Mail</string>
    <string name="signUpPhoneHint">Phone number</string>
    <string name="signUpSendButton">Sign Up</string>
    <string name="signUpUsernameErrorMessage">Username must be at least 5 characters</string>
    <string name="signUpUsernameTakenErrorMessage">Username already taken.</string>
    <string name="signUpEmailErrorMessage">Please enter a correct e-mail address</string>
    <string name="signUpPasswordErrorMessage">Password must be at least 5 characters</string>
    <string name="signUpPhoneErrorMessage">Enter a valid phone number of at least 10 characters</string>
    <!-- String resources for Mood -->
    <string name="text_moodVeryHappy">Very happy</string>
    <string name="text_moodGood">Good</string>
    <string name="text_moodSoSoLaLa">SoSoLaLa</string>
    <string name="text_moodNotAmused">Not amused</string>
    <string name="text_moodVeryMoody">Very moody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="comment_alert_title">Comment:  </string>
    <string name="comment_alert_message">Comment or no comment? That is the question.</string>
    <string name="ok">OK</string>
    <string name="no_comment">No comment</string>


    <string name="tab_near_me">Near Me</string>
    <string name="tab_my_mood">My Mood</string>
    <string name="tab_mood_history">Mood History</string>

    <string name="dummy_location">Dummy location</string>

    <string name="loading_moods">Loading moods</string>

    <string name="no_network">Turn on the network connection and try again!</string>


    <string name="date">Date</string>
    <string name="mood">Mood [1-5]</string>

    <string name="pref_username">pref_username</string>
    <string name="pref_password">pref_password</string>

    <string name="erni_moods">ERNI Moods:</string>
    <string name="contacts">contacts you</string>
    <string name="hello">Hello</string>
    <string name="meet">! Would you like to meet at </string>

    <string name="greetings_morning">morning</string>
    <string name="greetings_afternoon">afternoon </string>
    <string name="greetings_evening">evening </string>
    <string name="greetings_good">Good </string>
    <string name="greetings_how">. How are you today? </string>

    <string name="send_email">Send Email </string>
    <string name="send_textmessage">Send SMS </string>
    <string name="no_user"> No user selected or no e-mail available. </string>

    <string name="map_error"> Error creating map </string>
    <string name="already_registered">Already registered?</string>
    <string name="link">Login here.</string>
    <string name="login_label">Login using an existing username</string>

    <string name="selected_bar">Selected Bar:</string>
    <string name="selected_user">Selected User:</string>
    <string name="signupLink_label">Sign Up</string>
    <string name="linkToSignUp">Sign Up here</string>
    <string name="not_registered">Not signed up yet?</string>
    <string name="authorize_progress">Authorizing user</string>
    <string name="place_proximity_options_summary">Where is the app looking for google places if a mood has been clicked</string>
    <string name="place_proximity_options_title">Places proximity</string>


</resources>
