<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:textAlignment="center"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="162dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/erni_mood_icon" />

    <TextView
        android:id="@+id/signUpTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/signUpTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#444" />

    <EditText
        android:id="@+id/signUpUserInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/signUpUsernameHint1"
        android:inputType="text"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/signUpPasswordInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/SignUpPasswordHint"
        android:inputType="textPassword"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/signUpEmailInput"

        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/signUpEmailHint"
        android:inputType="textEmailAddress"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/signUpPhoneInput"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/signUpPhoneHint"
        android:inputType="phone"
        android:singleLine="true"
         />

    <TextView
        android:id="@+id/signUpError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="false"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff1412dd"
        android:text="@string/signUpSendButton"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/already_registered" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="50dp"
            android:text="@string/link"
            android:textColor="#ff0e159d"
            android:textColorLink="#ff0e159d"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>