<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:src="@drawable/erni" />

        <TextView
            android:id="@+id/textViewGreeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="30dp"
        android:gravity="center"
            android:text="@string/greeting"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
        android:id="@+id/button_VeryHappy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.06"
        android:background="@android:color/transparent"
            android:contentDescription="@string/text_moodVeryHappy"
            android:focusableInTouchMode="false"
            android:src="@drawable/smiley_very_happy" />

        <ImageButton
        android:id="@+id/button_Good"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.04"
        android:background="@android:color/transparent"
            android:contentDescription="@string/text_moodGood"
            android:cropToPadding="true"
            android:focusableInTouchMode="false"
            android:src="@drawable/smiley_good" />

        <ImageButton
        android:id="@+id/button_SoSoLaLa"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05"
        android:background="@android:color/transparent"
            android:contentDescription="@string/text_moodSoSoLaLa"
            android:focusableInTouchMode="false"
            android:src="@drawable/smiley_sosolala" />

        <ImageButton
        android:id="@+id/button_NotAmused"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.05"
            android:background="@android:color/transparent"
        android:contentDescription="@string/text_moodNotAmused"
            android:focusableInTouchMode="false"
            android:src="@drawable/smiley_not_amused" />

        <ImageButton
        android:id="@+id/button_VeryMoody"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
            android:layout_weight="0.06"
        android:background="@android:color/transparent"
            android:contentDescription="@string/text_moodVeryMoody"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:src="@drawable/smiley_very_moody" />

    </LinearLayout>

</ScrollView>